--- a/WebAdmin/wwwroot/_resources/styles/docomb/admin.scss
+++ b/WebAdmin/wwwroot/_resources/styles/docomb/admin.scss
@@ -130,8 +130,9 @@ html { @include lightPreset; }
 
 
 
-.emptyPage { position: relative; width: 100%; height: 100%; overflow: hidden;
-	.watermark { position: absolute; left: 50%; top: 50%; font-size: 20vmin; margin: -10vmin; opacity: .1; user-select: none;
+.emptyPage { width: 100%; height: 100%; overflow: hidden; }
+.emptyPage, .watermarkedPart { position: relative;
+	.watermark { z-index: 1; position: absolute; left: 50%; top: 50%; font-size: 20vmin; margin: -10vmin; opacity: .1; user-select: none;
 		i { width: 1em; height: 1em; margin: 0; padding: 0; }
 	}
 }
@@ -159,11 +160,16 @@ html { @include lightPreset; }
 
 
 .editTextFile { display: flex; width: 100%; height: 100%;
-	.editor { flex: 1 1 50%; overflow: hidden;
-		* { width: 100%; height: 100%; margin: 0; }
+	.editor { flex: 1 1 50%; overflow: hidden; position: relative;
+		/*.emptypage { position: absolute; z-index: 1; left: 0; top: 0; width: 100%; height: 100%; }*/
+		.editorInput { position: absolute; z-index: 2; left: 0; top: 0; width: 100%; height: 100%;
+			* { background: transparent; width: 100%; height: 100%; margin: 0; border-radius: 0; }
+		}
 		textarea { padding: 32px; font-family: $fontFamilyMono; }
 	}
-	.preview { flex: 1 1 50%; max-width: 50%; overflow: auto; padding: 32px; border-left: 1px solid; @include themeMap("border-color", $menuBorderColor); }
+	.preview { flex: 1 1 50%; max-width: 50%; border-left: 1px solid; @include themeMaps(("border-color": $menuBorderColor, "background": $menuBackgroundColor));
+		#previewContainer { position: absolute; left: 0; top: 0; width: 100%; height: 100%; z-index: 2; overflow: auto; padding: 32px; background-color: transparent; }
+	}
 }
 
 
