--- a/WebAdmin/wwwroot/_resources/styles/docomb/shared/theme.scss
+++ b/WebAdmin/wwwroot/_resources/styles/docomb/shared/theme.scss
@@ -3,9 +3,9 @@ $bgColor: ( 'dark': #191919, 'light': #fff );
 $textColor: ( 'dark': #fff, 'light': #000 );
 $textColorLight: ( 'dark': #ccc, 'light': #666 );
 $menuBackgroundColor: ( 'dark': #333, 'light': #eee );
-$menuBorderColor: ( 'dark': #494949, 'light': #eee );
-$linkColor: ( 'dark': #0bf, 'light': #039 );
-$accentColor: ( 'dark': #0bf, 'light': #039 );
+$menuBorderColor: ( 'dark': #494949, 'light': #c9c9c9 );
+$linkColor: ( 'dark': #0bf, 'light': #03f );
+$accentColor: ( 'dark': #0bf, 'light': #03f );
 $buttonHoverColor: ( 'dark': rgba(255, 255, 255, .1), 'light': rgba(0, 0, 0, .1) );
 $buttonActiveColor: ( 'dark': rgba(255, 255, 255, .13), 'light': rgba(0, 0, 0, .13) );
 
