--- a/WebAdmin/Areas/Admin/Pages/Shared/_AuthLayout.cshtml
+++ b/WebAdmin/Areas/Admin/Pages/Shared/_AuthLayout.cshtml
@@ -6,18 +6,13 @@
 	<title>@(Docomb.WebCore.Configurations.MainConfig.Instance.SiteName)</title>
 	<base href="@ViewBag.baseHref" />
 	<link rel="stylesheet" href="~/_resources/styles/docomb/admin.css" />
-	<script>
-		window["basePath"] = @Json.Serialize(ViewBag.basePath);
-		window["readerBasePath"] = @Json.Serialize(ViewBag.readerBasePath);
-	</script>
 </head>
 <body>
 	<div class="authPage">
 		<div class="title"><h1>@(Docomb.WebCore.Configurations.MainConfig.Instance.SiteName)</h1></div>
-		<div class="authContent watermarkedPart">
+		<div class="authContent">
 			@RenderBody()
 		</div>
 	</div>
-	<script type="module" src="@Url.Content("~/_resources/admin/bundle.js")"></script>
 </body>
 </html>
