--- a/WebAdmin/wwwroot/_resources/styles/docomb/shared/theme.scss
+++ b/WebAdmin/wwwroot/_resources/styles/docomb/shared/theme.scss
@@ -9,6 +9,7 @@ $linkColor: ( 'dark': #0bf, 'light': #03f );
 $accentColor: ( 'dark': #0bf, 'light': #03f );
 $buttonHoverColor: ( 'dark': rgba(255, 255, 255, .1), 'light': rgba(0, 0, 0, .1) );
 $buttonActiveColor: ( 'dark': rgba(255, 255, 255, .13), 'light': rgba(0, 0, 0, .13) );
+$errorColor: ( 'dark': #c00, 'light': #c00 );
 
 $fontFamily: "Segoe UI", "Segoe UI Web (West European)", "Segoe UI", -apple-system, BlinkMacSystemFont, Roboto, "Helvetica Neue", sans-serif;
 $fontFamilyMono: Monaco, Menlo, Consolas, "Droid Sans Mono", Inconsolata, "Courier New", monospace;
