--- a/WebAdmin/wwwroot/_resources/styles/docomb/shared/theme.scss
+++ b/WebAdmin/wwwroot/_resources/styles/docomb/shared/theme.scss
@@ -3,6 +3,7 @@ $bgColor: ( 'dark': #191919, 'light': #fff );
 $textColor: ( 'dark': #fff, 'light': #000 );
 $textColorLight: ( 'dark': #ccc, 'light': #666 );
 $menuBackgroundColor: ( 'dark': #333, 'light': #eee );
+$sideBarBackgroundColor: ( 'dark': #222, 'light': #e9e9e9 );
 $menuBorderColor: ( 'dark': #494949, 'light': #c9c9c9 );
 $menuBorderColorMultiply: ( 'dark': rgba(255, 255, 255, .2), 'light': rgba(0, 0, 0, .2) );
 $linkColor: ( 'dark': #0bf, 'light': #03f );
