--- a/WebAdmin/wwwroot/_resources/styles/docomb/admin.scss
+++ b/WebAdmin/wwwroot/_resources/styles/docomb/admin.scss
@@ -124,7 +124,9 @@ html { @include lightPreset; }
 .pageGrid { width: 100%; height: 100%; overflow: hidden; display: flex; flex-direction: column;
 	.pageTitle { flex: 0 0 auto; padding: 0px 24px 10px 24px; width: 100%; }
 	.pageCommands { flex: 0 0 auto; width: 100%; }
-	.pageContent { flex: 1 1 100%; overflow: auto; }
+	.pageContent { flex: 1 1 100%; overflow: auto;
+		> .loadingSpinner { padding: 20px; }
+	}
 	.pageTitle + .pageCommands { margin-top: -10px; }
 	.pageTitle + .pageContent, .pageCommands + .pageContent { border-top: 1px solid; @include themeMap("border-color", $menuBorderColor); }
 }
@@ -173,6 +175,11 @@ html { @include lightPreset; }
 	}
 }
 
+
+.usersEditor {
+	width: 100%; height: 100%; display: flex; flex-direction: column;
+	.list { flex: 1 1 100%; position: relative; }
+}
 
 
 .invisibleUploadInput { width: 0; height: 0; overflow: hidden; display: block; }
