--- a/WebReader/wwwroot/_resources/styles/docomb/reader.css
+++ b/WebReader/wwwroot/_resources/styles/docomb/reader.css
@@ -48,10 +48,10 @@ html body {
   color: #000; }
 
 html a {
-  color: #36c; }
+  color: #03f; }
 
 html header, html footer {
-  background: #ddd; }
+  background: #eee; }
 
 html nav a {
   color: #000; }
@@ -96,14 +96,14 @@ html .editor-colors .constructor {
   color: #800080; }
 
 .dark body {
-  background: #222;
+  background: #191919;
   color: #fff; }
 
 .dark a {
   color: #0bf; }
 
 .dark header, .dark footer {
-  background: #444; }
+  background: #333; }
 
 .dark nav a {
   color: #fff; }
@@ -149,12 +149,12 @@ html .editor-colors .constructor {
 
 @media (prefers-color-scheme: dark) {
   html body {
-    background: #222;
+    background: #191919;
     color: #fff; }
   html a {
     color: #0bf; }
   html header, html footer {
-    background: #444; }
+    background: #333; }
   html nav a {
     color: #fff; }
   html .editor-colors .plainText, html .editor-colors .xmlAttributeQuotes {
@@ -187,9 +187,9 @@ html .editor-colors .constructor {
     background: #fff;
     color: #000; }
   .light a {
-    color: #36c; }
+    color: #03f; }
   .light header, .light footer {
-    background: #ddd; }
+    background: #eee; }
   .light nav a {
     color: #000; }
   .light .editor-colors .plainText, .light .editor-colors .xmlAttributeQuotes {
@@ -227,14 +227,14 @@ header {
     border-bottom-width: 1px;
     border-bottom-style: solid; }
     html header .workspaces {
-      border-bottom-color: #bbb; }
+      border-bottom-color: #c9c9c9; }
     .dark header .workspaces {
-      border-bottom-color: #666; }
+      border-bottom-color: #494949; }
     @media (prefers-color-scheme: dark) {
       html header .workspaces {
-        border-bottom-color: #666; }
+        border-bottom-color: #494949; }
       .light header .workspaces {
-        border-bottom-color: #bbb; } }
+        border-bottom-color: #c9c9c9; } }
     header .workspaces a {
       display: inline-block;
       font-size: 14px;
@@ -347,36 +347,36 @@ main blockquote {
   letter-spacing: -1px;
   font-style: italic; }
   html main blockquote {
-    border-left-color: #bbb;
-    background: #ddd; }
+    border-left-color: #c9c9c9;
+    background: #eee; }
   .dark main blockquote {
-    border-left-color: #666;
-    background: #444; }
+    border-left-color: #494949;
+    background: #333; }
   @media (prefers-color-scheme: dark) {
     html main blockquote {
-      border-left-color: #666;
-      background: #444; }
+      border-left-color: #494949;
+      background: #333; }
     .light main blockquote {
-      border-left-color: #bbb;
-      background: #ddd; } }
+      border-left-color: #c9c9c9;
+      background: #eee; } }
 
 main pre, main code {
   font-family: Consolas, Courier New, Courier, monospace;
   border: 1px solid;
   font-size: .9em; }
   html main pre, html main code {
-    border-color: #bbb;
-    background: #ddd; }
+    border-color: #c9c9c9;
+    background: #eee; }
   .dark main pre, .dark main code {
-    border-color: #666;
-    background: #444; }
+    border-color: #494949;
+    background: #333; }
   @media (prefers-color-scheme: dark) {
     html main pre, html main code {
-      border-color: #666;
-      background: #444; }
+      border-color: #494949;
+      background: #333; }
     .light main pre, .light main code {
-      border-color: #bbb;
-      background: #ddd; } }
+      border-color: #c9c9c9;
+      background: #eee; } }
 
 main pre {
   padding: 10px;
@@ -414,14 +414,14 @@ main table {
   border-collapse: collapse;
   border: 1px solid; }
   html main table tr:hover {
-    background: #ddd; }
+    background: #eee; }
   .dark main table tr:hover {
-    background: #444; }
+    background: #333; }
   @media (prefers-color-scheme: dark) {
     html main table tr:hover {
-      background: #444; }
+      background: #333; }
     .light main table tr:hover {
-      background: #ddd; } }
+      background: #eee; } }
   main table th, main table td {
     padding: 5px 10px;
     border: 1px solid;
@@ -430,35 +430,180 @@ main table {
     border-bottom-width: 2px; }
 
 html main table, html main table td, html main table th {
-  border-color: #bbb; }
+  border-color: #c9c9c9; }
 
 .dark main table, .dark main table td, .dark main table th {
-  border-color: #666; }
+  border-color: #494949; }
 
 @media (prefers-color-scheme: dark) {
   html main table, html main table td, html main table th {
-    border-color: #666; }
+    border-color: #494949; }
   .light main table, .light main table td, .light main table th {
-    border-color: #bbb; } }
+    border-color: #c9c9c9; } }
 
 html main table th {
   border-bottom-color: #666;
-  background: #ddd; }
+  background: #eee; }
 
 .dark main table th {
   border-bottom-color: #ccc;
-  background: #444; }
+  background: #333; }
 
 @media (prefers-color-scheme: dark) {
   html main table th {
     border-bottom-color: #ccc;
-    background: #444; }
+    background: #333; }
   .light main table th {
     border-bottom-color: #666;
-    background: #ddd; } }
+    background: #eee; } }
 
 .editor-colors .typeVariable, .editor-colors .italic {
   font-style: italic; }
 
 .editor-colors .markdownHeader, .editor-colors .markdownListItem, .editor-colors .bold {
   font-weight: bold; }
+
+.authPage {
+  width: 100vw;
+  height: 100vh;
+  display: flex;
+  flex-direction: column;
+  overflow: auto; }
+  .authPage > .title {
+    flex: 0 0 auto;
+    text-align: center; }
+    .authPage > .title h1 {
+      margin: 0;
+      padding: 16px;
+      font-size: 16px;
+      font-weight: bold;
+      border-bottom: 1px solid; }
+      html .authPage > .title h1 {
+        border-color: #c9c9c9;
+        background: #eee; }
+      .dark .authPage > .title h1 {
+        border-color: #494949;
+        background: #333; }
+      @media (prefers-color-scheme: dark) {
+        html .authPage > .title h1 {
+          border-color: #494949;
+          background: #333; }
+        .light .authPage > .title h1 {
+          border-color: #c9c9c9;
+          background: #eee; } }
+  .authPage .authContent {
+    flex: 1 1 100%; }
+    .authPage .authContent > .inner {
+      position: relative;
+      z-index: 2;
+      min-width: 100%;
+      min-height: 90%;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center; }
+  .authPage .actionStatus {
+    padding: 32px; }
+    .authPage .actionStatus .title {
+      font-size: 24px;
+      text-align: center; }
+    .authPage .actionStatus.error .title {
+      font-weight: bold; }
+      html .authPage .actionStatus.error .title {
+        color: #c00; }
+      .dark .authPage .actionStatus.error .title {
+        color: #c00; }
+      @media (prefers-color-scheme: dark) {
+        html .authPage .actionStatus.error .title {
+          color: #c00; }
+        .light .authPage .actionStatus.error .title {
+          color: #c00; } }
+  .authPage .otherActions {
+    padding: 20px; }
+    .authPage .otherActions .links {
+      display: flex;
+      flex-wrap: wrap; }
+    .authPage .otherActions a {
+      color: inherit;
+      font-size: 16px;
+      padding: 12px;
+      text-decoration: none; }
+      html .authPage .otherActions a:hover, html .authPage .otherActions a:focus {
+        color: #03f;
+        background: rgba(0, 0, 0, 0.1); }
+      .dark .authPage .otherActions a:hover, .dark .authPage .otherActions a:focus {
+        color: #0bf;
+        background: rgba(255, 255, 255, 0.1); }
+      @media (prefers-color-scheme: dark) {
+        html .authPage .otherActions a:hover, html .authPage .otherActions a:focus {
+          color: #0bf;
+          background: rgba(255, 255, 255, 0.1); }
+        .light .authPage .otherActions a:hover, .light .authPage .otherActions a:focus {
+          color: #03f;
+          background: rgba(0, 0, 0, 0.1); } }
+      html .authPage .otherActions a:active {
+        background: rgba(0, 0, 0, 0.13); }
+      .dark .authPage .otherActions a:active {
+        background: rgba(255, 255, 255, 0.13); }
+      @media (prefers-color-scheme: dark) {
+        html .authPage .otherActions a:active {
+          background: rgba(255, 255, 255, 0.13); }
+        .light .authPage .otherActions a:active {
+          background: rgba(0, 0, 0, 0.13); } }
+  .authPage .loginSchemeSelection {
+    padding: 20px 20px 24px 20px; }
+    .authPage .loginSchemeSelection .label {
+      font-size: 14px;
+      padding: 8px 12px; }
+      html .authPage .loginSchemeSelection .label {
+        color: #666; }
+      .dark .authPage .loginSchemeSelection .label {
+        color: #ccc; }
+      @media (prefers-color-scheme: dark) {
+        html .authPage .loginSchemeSelection .label {
+          color: #ccc; }
+        .light .authPage .loginSchemeSelection .label {
+          color: #666; } }
+    .authPage .loginSchemeSelection .schemes {
+      font-size: 0; }
+      .authPage .loginSchemeSelection .schemes form button {
+        display: flex;
+        align-items: center;
+        width: 100%;
+        background: transparent;
+        color: inherit;
+        font-family: inherit;
+        font-size: 16px;
+        font-weight: bold;
+        border: none;
+        border-radius: 0;
+        padding: 12px;
+        text-align: left;
+        cursor: pointer; }
+        html .authPage .loginSchemeSelection .schemes form button:hover, html .authPage .loginSchemeSelection .schemes form button:focus {
+          color: #03f;
+          background: rgba(0, 0, 0, 0.1); }
+        .dark .authPage .loginSchemeSelection .schemes form button:hover, .dark .authPage .loginSchemeSelection .schemes form button:focus {
+          color: #0bf;
+          background: rgba(255, 255, 255, 0.1); }
+        @media (prefers-color-scheme: dark) {
+          html .authPage .loginSchemeSelection .schemes form button:hover, html .authPage .loginSchemeSelection .schemes form button:focus {
+            color: #0bf;
+            background: rgba(255, 255, 255, 0.1); }
+          .light .authPage .loginSchemeSelection .schemes form button:hover, .light .authPage .loginSchemeSelection .schemes form button:focus {
+            color: #03f;
+            background: rgba(0, 0, 0, 0.1); } }
+        html .authPage .loginSchemeSelection .schemes form button:active {
+          background: rgba(0, 0, 0, 0.13); }
+        .dark .authPage .loginSchemeSelection .schemes form button:active {
+          background: rgba(255, 255, 255, 0.13); }
+        @media (prefers-color-scheme: dark) {
+          html .authPage .loginSchemeSelection .schemes form button:active {
+            background: rgba(255, 255, 255, 0.13); }
+          .light .authPage .loginSchemeSelection .schemes form button:active {
+            background: rgba(0, 0, 0, 0.13); } }
+        .authPage .loginSchemeSelection .schemes form button img {
+          display: block;
+          width: 1.2em;
+          height: 1.2em;
+          margin-right: .5em; }
