--- a/WebAdmin/wwwroot/_resources/styles/docomb/shared/theme.scss
+++ b/WebAdmin/wwwroot/_resources/styles/docomb/shared/theme.scss
@@ -1,7 +1,7 @@
 ﻿// Light/Dark theme setting and mixins
 $bgColor: ( 'dark': #191919, 'light': #fff );
 $textColor: ( 'dark': #fff, 'light': #000 );
-$textColorLight: ( 'dark': #ccc, 'light': #666 );
+$textColorLight: ( 'dark': #999, 'light': #666 );
 $menuBackgroundColor: ( 'dark': #333, 'light': #eee );
 $sideBarBackgroundColor: ( 'dark': #222, 'light': #e9e9e9 );
 $menuBorderColor: ( 'dark': #494949, 'light': #c9c9c9 );
