--- a/WebReader/Areas/Reader/Pages/Shared/_Header.cshtml
+++ b/WebReader/Areas/Reader/Pages/Shared/_Header.cshtml
@@ -11,6 +11,13 @@
 
 	<div class="pageTitle">
 		@{ List<Docomb.ContentStorage.ContentItemSummary> parents = ViewBag.Context?.GetParents(); }
+		@if (Docomb.WebCore.Configurations.MainConfig.Instance.Authentication.AuthorizeReader)
+		{
+			<div class="user">
+				<span class="name" title="@ViewBag.User?.Username">@ViewBag.User?.Name</span>
+				<span class="command"><a href="/account/logout">Log out</a></span>
+			</div>
+		}
 		@if (parents?.Count > 0)
 		{
 			<nav class="breadcrumbs">
