--- a/WebReader/wwwroot/_resources/styles/docomb/reader.scss
+++ b/WebReader/wwwroot/_resources/styles/docomb/reader.scss
@@ -129,7 +129,8 @@ header {
 	.pageTitle {
 		@include padding;
 		.user { font-size: 12px; padding: 0 0 5px 15px; float: right; position: relative; z-index: 2;
-			.command { @include themeMap("color", $textColorLight); a { color: inherit; } }
+			.name { font-weight: bold; }
+			.command { margin-left: 5px; @include themeMap("color", $textColorLight); a { color: inherit; } }
 		}
 		.breadcrumbs {
 			margin: -5px; position: relative; z-index: 1; font-size: 12px; @include themeMap("color", $textColorLight);
